sudah bisa mulai mengerjakan

--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -39,8 +39,8 @@
 <body>
     <div class="container">
         <h2>Choose Your Role</h2>
-        <a href="register_pekerja.html" class="button">Pekerja</a>
-        <a href="register_pengguna.html" class="button">Pengguna</a>
+        <a href="register_pekerja" class="button">Pekerja</a>
+        <a href="register_pengguna" class="button">Pengguna</a>
     </div>
 </body>
 </html>
