--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>SIJARTA By &lt;Nama Kelompok&gt;</h1>
+        <h1>SIJARTA By &lt;WeakEntity&gt;</h1>
         <a href="{% url 'authentication:login' %}" class="button">Login</a>
         <a href="{% url 'authentication:register' %}" class="button">Register</a>
     </div>
