--- a/templates/homepage1.html
+++ b/templates/homepage1.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Homepage Loaded</h1>
+<h1>Welcome to SIJARTA!</h1>
 <p>Categories: {{ categories|length }}</p>
 <div>
     <label for="category">Kategori</label>
@@ -31,7 +31,15 @@
         <h2>{{ category.name }}</h2>
         <ul>
             {% for subcategory in category.subcategories.all %}
-                <li><a href="{% url 'subcategory_detail' subcategory.id %}">{{ subcategory.name }}</a></li>
+                <li>
+                    <a href="{% url 'subcategory_detail' subcategory.id %}">{{ subcategory.name }}</a>
+                    <!-- Tombol Buat Testimoni -->
+                    {% if subcategory.status == "Pesanan Selesai" %}
+                        <button type="button" onclick="location.href='{% url 'buat_testimoni' subcategory.id %}'">
+                            Buat Testimoni
+                        </button>
+                    {% endif %}
+                </li>
             {% endfor %}
         </ul>
     {% endfor %}
