--- a/authentication/templates/landing_page.html
+++ b/authentication/templates/landing_page.html
@@ -38,9 +38,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>SIJARTA By &lt;Nama Kelompok&gt;</h1>
+        <h1>SIJARTA By &lt;Weak Entity&gt;</h1>
         <a href="{% url 'authentication:login' %}" class="button">Login</a>
-        <a href="{% url 'authentication:register' %} class="button">Register</a>
+        <a href="{% url 'authentication:register' %}" class="button">Register</a>
     </div>
 </body>
 </html>
