--- a/mypay/templates/mypay.html
+++ b/mypay/templates/mypay.html
@@ -1,10 +1,12 @@
 <!-- templates/mypay.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyPay</title>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block meta %}
+<title>mypay</title>
+{% endblock meta %}
+
+{% block content %}
     <style>
         table {
             width: 100%;
@@ -74,3 +76,4 @@
     </table>
 </body>
 </html>
+{% endblock content %}
