--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -36,7 +36,7 @@
 </style>
 
 {% block content %}
-<h1>Homepage Loaded</h1>
+<h1>Welcome to SIJARTA!</h1>
 
 <div>
     <label for="category">Kategori</label>
