--- a/mypay/templates/mypay.html
+++ b/mypay/templates/mypay.html
@@ -66,7 +66,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for transaksi in riwayat_transaksi %}
+            {% for transaksi in transactions %}
             <tr>
                 <td>{{ transaksi.nominal }}</td>
                 <td>{{ transaksi.tanggal }}</td>
