--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,20 +14,21 @@
         </div>
 
         <div class="flex items-center gap-8">
-            {% if request.user.is_authenticated %}
+            {% if user_type == 'pengguna' or user_type == 'pekerja' %}
                 <div class="hidden md:flex text-[#003f7e] gap-8 -mb-1">
                     <a class="nav-btn" href="{% url 'main:show_main' %}">Homepage</a>
                     
-                    {% if 'user_type' in request.session and request.session.user_type == 'pengguna' %}
+                    {% if 'user_type' == 'pengguna' %}
                         <a class="nav-btn" href="/mypay">MyPay</a>
                         <a class="nav-btn" href="/orders">Kelola Pesanan Saya</a>
                         <a class="nav-btn" href="/discount">Diskon</a>
-                        <a class="nav-btn" href="{% url 'authentication:profile_pengguna' %}">Profile</a>
+             
                     {% elif 'user_type' in request.session and request.session.user_type == 'pekerja' %}
                         <a class="nav-btn" href="/mytasks">Kelola Pekerjaan Saya</a>
                         <a class="nav-btn" href="/task-status">Kelola Status Pekerjaan</a>
                         <a class="nav-btn" href="/mypay">MyPay</a>
                         <a class="nav-btn" href="{% url 'authentication:profile_pekerja' %}">Profile</a>
+         
                     {% endif %}
                     
                     <a class="nav-btn" href="/auth/logout">Logout</a>
@@ -39,16 +40,19 @@
                     <div id="dropdown-content-mobile" class="hidden">
                         <ul>
                             <li><a href="{% url 'main:show_main' %}">Homepage</a></li>
-                            {% if 'user_type' in request.session and request.session.user_type == 'pengguna' %}
+                            {% if 'user_type' == 'pengguna' %}
+                                <li><a href="/mypay">MyPay</a></li>
                                 <li><a href="/mypay">MyPay</a></li>
                                 <li><a href="/orders">Kelola Pesanan Saya</a></li>
                                 <li><a href="/discount">Diskon</a></li>
-                                <li><a href="{% url 'authentication:profile_pengguna' %}">Profile</a></li>
+             
                             {% elif 'user_type' in request.session and request.session.user_type == 'pekerja' %}
                                 <li><a href="/mytasks">Kelola Pekerjaan Saya</a></li>
                                 <li><a href="/task-status">Kelola Status Pekerjaan</a></li>
                                 <li><a href="/mypay">MyPay</a></li>
                                 <li><a href="{% url 'authentication:profile_pekerja' %}">Profile</a></li>
+
+                               
                             {% endif %}
                             <li><a href="/auth/logout">Logout</a></li>
                         </ul>
