--- a/pekerjajasa/templates/status_pekerjaan_jasa.html
+++ b/pekerjajasa/templates/status_pekerjaan_jasa.html
@@ -62,7 +62,17 @@
             <td class="border border-gray-300 px-4 py-2">Rp. {{ pesanan.total_biaya }}</td>
             <td class="border border-gray-300 px-4 py-2">{{ pesanan.status }}</td>
             <td class="border border-gray-300 px-4 py-2">
-                {% if pesanan.status == "Menunggu Pekerja Berangkat" %}
+                {% if pesanan.status == "Mencari Pekerja Terdekat" %}
+                <form method="POST" action="{% url 'pekerjajasa:update_status_view' pesanan.id %}">
+                    {% csrf_token %}
+                    <button 
+                        type="submit" 
+                        class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600"
+                    >
+                        Menunggu Pekerja Berangkat
+                    </button>
+                </form>
+                {% elif pesanan.status == "Menunggu Pekerja Berangkat" %}
                 <form method="POST" action="{% url 'pekerjajasa:update_status_view' pesanan.id %}">
                     {% csrf_token %}
                     <button 
